--- a/admin_system/package.json
+++ b/admin_system/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.18.2",
+    "axios": "^0.24.0",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "less": "^4.1.2",
@@ -16,7 +18,8 @@
     "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.3",
+    "store": "^2.0.12",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -42,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
