--- a/admin_system/package.json
+++ b/admin_system/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
+    "jsonp": "^0.2.1",
     "less": "^4.1.2",
     "less-loader": "6.2.0",
     "react": "^17.0.2",
